@@ -2,7 +2,7 @@
 /**
  * Plugin Name: WP DS NPR API
  * Description: A collection of tools for reusing content from NPR.org supplied by Digital Services.
- * Version: 1.5.1
+ * Version: 1.5.1-1
  * Author: Kevin Moylan
  * License: GPLv2
 */
